--- a/views/index-main.ejs
+++ b/views/index-main.ejs
@@ -12,6 +12,12 @@
 	<title>LiNK (dev page)</title>
 </head>
 <body>
+	<div id="loading" class="screen">
+		<div class="wrapper">
+			<div class="circle"></div>
+			<p>Loading</p>
+		</div>
+	</div>
 	<div id="title" class="screen noSelectTouch">
 		<div class="main">
 			<h1 class="glow">Home</h1>
