start single view mode

--- a/views/index-main.ejs
+++ b/views/index-main.ejs
@@ -192,6 +192,7 @@
 <script type="text/javascript">
 	const PANDA_PUBLIC_KEY = <%- JSON.stringify(PANDA_PUBLIC_KEY) %>;
 	const PANDA_SECRET_KEY = <%- JSON.stringify(PANDA_SECRET_KEY) %>;
+	const singleView = false;
 </script>
 
 <script type="text/javascript" src="/js/lib/three.js"></script>
@@ -210,7 +211,6 @@
 <script type="text/javascript" src="/js/data.js"></script>
 <script type="text/javascript" src="/js/Loader.js"></script>
 <script type="text/javascript" src="/js/Globe.js"></script>
-<script type="text/javascript" src="/js/glowMesh.js"></script>
 <script type="text/javascript" src="/js/Avatar.js"></script>
 <script type="text/javascript" src="/js/API.js"></script>
 <script type="text/javascript" src="/js/WorldController.js"></script>
