--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -13,10 +13,6 @@ $Univers: 'Univers';
 	box-sizing: border-box;
 }
 
-body{
-	overflow: hidden;
-}
-
 $white: #f4f5f7;
 $darkwhite: #cbcdd0;
 $black: #00010c;
@@ -26,6 +22,14 @@ $red: #c14f49;
 
 body{
 	margin: 0;
+	overflow: hidden;
+}
+
+#activeQuote{
+	position: absolute;
+	top: 55%;
+	left: 50%;
+	transform: translateX(-50%);
 }
 
 h1, h2, header, p, a, span{
