--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -25,11 +25,63 @@ body{
 	overflow: hidden;
 }
 
-#activeQuote{
+#activeQuoteBox{
 	position: absolute;
 	top: 55%;
 	left: 50%;
 	transform: translateX(-50%);
+	text-align: center;
+	transition: all .5s ease;
+
+	h1{
+		font-family: $Brandon;
+		font-size: 1rem;
+		color: $white;
+		margin: 0;
+	}
+
+	p{
+		font-family: $Brandon;
+		color: $white;
+	}
+
+	#activeQuote{
+		font-family: $Brandon;
+		margin: 10px;
+		font-size: 2rem;
+	}
+
+	#activeUser{
+		margin: 0;
+		font-size: 1rem;
+	}
+
+}
+
+#moveLeft, #moveRight{
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	transition: box-shadow .25s ease;
+	box-shadow: 0px 0px 10px $black;
+	&:hover{
+		box-shadow: 0px 0px 25px $black;
+	}
+}
+
+#moveLeft{
+	left: 0;
+	margin-left: 25px;
+	box
+}
+
+#moveLeft:before{
+	content: "<" !important;
+}
+
+#moveRight{
+	right: 0;
+	margin-right: 25px;
 }
 
 h1, h2, header, p, a, span{
