--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,13 @@
 			<p>Loading</p>
 		</div>
 	</div>
-	<div id="activeQuote"></div>
+	<div id="moveLeft" class="submitButton"></div>
+	<div id="moveRight" class="submitButton"></div>
+	<div id="activeQuoteBox">
+		<h1>Home is...</h1>
+		<p id="activeQuote"></p>
+		<p id="activeUser"></p>
+	</div>
 	<div id="container"></div>
 </body>
 <script>
