--- a/views/index-main.ejs
+++ b/views/index-main.ejs
@@ -25,7 +25,11 @@
 			<p class="blinkAnim">Click and hold</p>
 		</div>
 	</div>
-	<div id="instructions">Hold down space to explore</div>
+	<div id="instructions">
+	  <p id="WebInstructions">Hold down space to explore</p>
+	  <p id="MobileInstructions">Press and hold to explore</p>
+	</div>
+
 	<div id="nameInput" class="screen">
 		<div class="main">
 			<h1 class="glow">What's your name?</h1>
