--- a/views/index-main.ejs
+++ b/views/index-main.ejs
@@ -207,9 +207,12 @@
 		character: null,
 		location: "earth"
 	};
+
+	const isMobile = ( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) ? true : false;
 </script>
 
 <script type="text/javascript" src="/js/Location.js"></script>
+
 <script type="text/javascript" src="/js/lib/three.js"></script>
 <script type="text/javascript" src="/js/lib/OrbitControls.js"></script>
 <script type="text/javascript" src="/js/lib/SubdivisionModifier.js"></script>
