add media query on donation box

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,26 +5,6 @@ body {
   margin: 0;
   overflow: hidden; }
 
-.main{
-    width:90%;
-    left:5%;
-    right:5%;
-}
-
-#MobileInstructions{
-    display:none;
-}
-
-@media only screen and (max-width: 600px) {
-    #MobileInstructions{
-	display:inline;
-    }
-    #WebInstructions{
-	display:none;
-    }
-}
-
-
 #activeQuoteBox {
   position: absolute;
   top: 60%;
@@ -79,8 +59,6 @@ h1, h2, header, p, a, span {
   height: 100%;
   background: rgba(0, 1, 12, 0.8);
   color: #f4f5f7; }
-
-
 
 #loading {
   transition: all .6s ease;
@@ -164,9 +142,7 @@ h1, h2, header, p, a, span {
   z-index: 3;
   visibility: hidden; }
   #quoteInput .main, #nameInput .main {
-      width: 90%;
-      left:5%;
-      right:5%;
+    width: 600px;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -245,9 +221,7 @@ h1, h2, header, p, a, span {
       font-family: "Brandon Text";
       color: #f4f5f7;
       font-size: 2rem;
-      width: 90%;
-      left:5%;
-      right:5%;
+      width: 600px;
       margin: auto;
       font-weight: lighter;
       margin-bottom: 0; }
@@ -539,88 +513,8 @@ h1, h2, header, p, a, span {
       font-style: italic;
       text-transform: lowercase;
       list-style: none; }
-
-    @media only screen and (max-width: 600px) {
-	
-	#donation {
-	overflow: scroll;
-	/* Add touch scrolling */
-	overflow-y: scroll; 
-	-webkit-overflow-scrolling: touch;
-	width:100%;
-    }
-
-	.mobileFull{
-	    position:absolute;
-	    
-	    width:80%;
-	    height:80%;
-	    left:10%;
-    }
-
-	#donation .main .info {
-	    margin-top:2em;
-	}
-	.mobile-info{
-	    margin-top:2em;
-	}
-
-	.DonationSubmit{
-	    padding-bottom:10px;
-	}
-
-	.mobileForm{
-	    height:85%;
-	}
-    
-	body:{
-	    overflow:scroll;
-	}
-
-/*	.screen{
-	    position: absolute;
-	    left:5%;
-	    right:5%;
-	    width: 90%;
-	    height: 100%;
-  background: rgba(0, 1, 12, 0.8);
-  color: #f4f5f7; }*/
-
-	}
-    
-    }
-
-    .mobileShow{
-	display:none;
-    }
-    @media only screen
-    and (min-device-width : 100px)
-    and (max-device-width : 600px){
-	display: inline;
-    }
-    .noSelectTouch {
-	-webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    }
-
-  @media screen and (max-width:600px){
-  select,
-  textarea,
-  input {
-      font-size: 16px;
-  }
-}
-
-  @media screen and (max-width:600px){
-  select:focus,
-  textarea:focus,
-  input:focus {
-    font-size: 16px;
-    background: #eee;
-  }
-}
-
+  @media only screen and (max-width: 600px) {
+    #donation {
+      width: 100%; }
+      #donation .wrapper {
+        overflow-y: scroll; } }
