--- a/views/index-main.ejs
+++ b/views/index-main.ejs
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="/assets/fonts/caslon-web/stylesheet.css"/>
 	<link rel="stylesheet" type="text/css" href="/assets/fonts/brandon-text-web/stylesheet.css"/>
 	<link rel="stylesheet" type="text/css" href="/assets/fonts/itc-grouch-web/stylesheet.css"/>
-	<script src="//d2t45z63lq9zlh.cloudfront.net/panda-v0.0.5.min.js"></script>
+	<script src="https://d2t45z63lq9zlh.cloudfront.net/panda-v0.0.5.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="/css/style.css"/>
 	<title>LiNK (dev page)</title>
 </head>
@@ -223,10 +223,10 @@
 <script type="text/javascript" src="/js/lib/RenderPass.js"></script>
 <script type="text/javascript" src="/js/lib/ShaderPass.js"></script>
 
-<script type="text/javascript" src="/js/lib/iscroll.js"></script>
+<<!-- script type="text/javascript" src="/js/lib/iscroll.js"></script>
 <script type="text/javascript">
 var myScroll = new IScroll('#theWrapper');
-</script>
+</script> -->
 <script type="text/javascript" src="/js/lib/Tween.js"></script>
 <script type="text/javascript" src="/js/util.js"></script>
 <script type="text/javascript" src="/js/Shaders.js"></script>
