--- a/views/index-main.ejs
+++ b/views/index-main.ejs
@@ -68,7 +68,7 @@
 			<div id="quoteMainInfoClose" class="submitButton glowBorder"></div>
 		</div>
 	</div> -->
-	<div id="donation" class="screen">
+	<div id="donation" class="screen" style="visibility: visible;">
 		<div class="wrapper" id="theWrapper">
 			<div class="main mobile-full">
 				<div id="donationClose" class="submitButton glowBorder"></div>
@@ -223,10 +223,6 @@
 <script type="text/javascript" src="/js/lib/RenderPass.js"></script>
 <script type="text/javascript" src="/js/lib/ShaderPass.js"></script>
 
-<<!-- script type="text/javascript" src="/js/lib/iscroll.js"></script>
-<script type="text/javascript">
-var myScroll = new IScroll('#theWrapper');
-</script> -->
 <script type="text/javascript" src="/js/lib/Tween.js"></script>
 <script type="text/javascript" src="/js/util.js"></script>
 <script type="text/javascript" src="/js/Shaders.js"></script>
