--- a/views/index-main.ejs
+++ b/views/index-main.ejs
@@ -232,7 +232,7 @@
 <script type="text/javascript" src="/js/Loader.js"></script>
 <script type="text/javascript" src="/js/Globe.js"></script>
 <script type="text/javascript" src="/js/Avatar.js"></script>
-<script type="text/javascript" src="/js/API.js"></script>
+<script type="text/javascript" src="/js/api.js"></script>
 <script type="text/javascript" src="/js/WorldController.js"></script>
 <script type="text/javascript" src="/js/Animations.js"></script>
 <script type="text/javascript" src="/js/ui.js"></script>
