remove star field for mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,15 @@ body {
   margin: 0;
   overflow: hidden; }
 
+#MobileInstructions {
+  display: none; }
+
+@media only screen and (max-width: 600px) {
+  #MobileInstructions {
+    display: inline; }
+  #WebInstructions {
+    display: none; } }
+
 #activeQuoteBox {
   position: absolute;
   top: 60%;
