--- a/views/index-main.ejs
+++ b/views/index-main.ejs
@@ -211,6 +211,10 @@
 	};
 
 	const isMobile = ( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) ? true : false;
+
+	const isChrome = !!window.chrome && !!window.chrome.webstore;
+	const isFirefox = typeof InstallTrigger !== 'undefined';
+
 </script>
 
 <script type="text/javascript" src="/js/Location.js"></script>
