--- a/views/index-main.ejs
+++ b/views/index-main.ejs
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="/assets/fonts/itc-grouch-web/stylesheet.css"/>
 	<script src="https://d2t45z63lq9zlh.cloudfront.net/panda-v0.0.5.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="/css/style.css"/>
-	<title>LiNK (dev page)</title>
+	<title>Home</title>
 </head>
 <body>
 	<div id="loading" class="screen">
@@ -34,8 +34,8 @@
 		<div class="main">
 			<h1 class="glow">What's your name?</h1>
 			<form class="prompt" id="nameForm">
-			  <textarea maxlength="250" rows="3" spellcheck="false" id="nameInputAnswer" class="textinput" type="text" autofocus autocomplete="nope" placeholder="type something..." onfocus="this.placeholder = ''"
-				onblur="this.placeholder = 'type something...'"></textarea>
+			  <textarea maxlength="250" rows="3" spellcheck="false" id="nameInputAnswer" class="textinput" type="text" autofocus autocomplete="nope" placeholder="click here & type" onfocus="this.placeholder = ''"
+				onblur="this.placeholder = 'click here & type'"></textarea>
 			</form>
 			<div class="submitButton glowBorder"></div>
 			<div id="nameInputErr" class="inputErr">&zwnj;</div>
@@ -76,7 +76,7 @@
 				<div id="donationClose" class="submitButton glowBorder"></div>
 				<div class="info mobile-info">
 					<h1 class="glow">Finding Home</h1>
-					<p>What is home? Maybe it's better to ask where it is, or what it feels like. Or maybe it's <span id="donationQuoteAnswer">sample here</span> That <span id="userCharacter"></span> you see in the middle is your unique character, and those other avatars were made by people just like you. Each of them comes with their own meaning of home. Share your avatar with your friends using this link: <a id="userCharacterLink"></a></br></br></br>Liberty in North Korea is an organization that helps refugees escape an oppressive regime and find new homes across the world. You can support the cause by donating through the form below.</p>
+					<p>What is home? Maybe it's better to ask where it is, or what it feels like. Or maybe it's <span id="donationQuoteAnswer">sample here</span> That <span id="userCharacter"></span> you see in the middle is your unique character, and those other avatars were made by people just like you. Each of them comes with their own meaning of home. Share your avatar with your friends using this link: <a id="userCharacterLink"></a></br></br>Liberty in North Korea is an organization that helps refugees escape an oppressive regime and find new homes across the world. You can support the cause by donating through the form below.</p>
 					<a href="https://www.libertyinnorthkorea.org/" target="_blank">learn more</a>
 				</div>
 				<div id="donationConfirm">Thanks for your contribution!</div>
@@ -114,7 +114,7 @@
 						<h1 class="description">for your tax-deductible email receipt</h1>
 					</div>
 					<div id="donationSubmit" class="DonationSubmit">
-						<button type="submit">Submit</button>
+						<button type="submit">submit</button>
 					</div>
 					<div class="form-group error">
 						<ul id="error"></ul>
@@ -197,8 +197,6 @@
 </script>
 
 <script type="text/javascript">
-	const PANDA_PUBLIC_KEY = <%- JSON.stringify(PANDA_PUBLIC_KEY) %>;
-	const PANDA_SECRET_KEY = <%- JSON.stringify(PANDA_SECRET_KEY) %>;
 	const singleView = false;
 
 	const user_data = {
@@ -211,9 +209,10 @@
 	};
 
 	const isMobile = ( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) ? true : false;
-
 	const isChrome = !!window.chrome && !!window.chrome.webstore;
 	const isFirefox = typeof InstallTrigger !== 'undefined';
+
+	const reduced = isMobile || !(isChrome || isFirefox);
 
 </script>
 
@@ -244,7 +243,7 @@
 <script type="text/javascript" src="/js/main.js"></script>
 
 <script type="text/javascript">
-	Panda.init(PANDA_PUBLIC_KEY, 'donationForm');
+	Panda.init("pk_test_2C04UlQCKet4YoLtQVNkNQ", 'donationForm');
 
 	Panda.on('success', function(token){
 		UIController.submitDonation(token);
