--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="/assets/fonts/brandon-text-web/stylesheet.css"/>
 	<link rel="stylesheet" type="text/css" href="/assets/fonts/itc-grouch-web/stylesheet.css"/>
 	<link rel="stylesheet" type="text/css" href="/css/style.css"/>
-	<title>Single User Page</title>
+	<title>Home (your page)</title>
 </head>
 <body>
 	<div id="loading" class="screen">
@@ -31,6 +31,10 @@
 	const singleView = true;
 
 	const isMobile = ( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) ? true : false;
+	const isChrome = !!window.chrome && !!window.chrome.webstore;
+	const isFirefox = typeof InstallTrigger !== 'undefined';
+
+	const reduced = isMobile || !(isChrome || isFirefox);
 </script>
 
 <script type="vsh" id="globeVertex">
@@ -90,7 +94,7 @@
 <script type="text/javascript" src="/js/Globe.js"></script>
 <script type="text/javascript" src="/js/Avatar.js"></script>
 <script type="text/javascript" src="/js/Animations.js"></script>
-<script type="text/javascript" src="/js/API.js"></script>
+<script type="text/javascript" src="/js/api.js"></script>
 <script type="text/javascript" src="/js/WorldController.js"></script>
 <script type="text/javascript" src="/js/main-viewer.js"></script>
 </html>
