--- a/views/index-main.ejs
+++ b/views/index-main.ejs
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="/assets/fonts/itc-grouch-web/stylesheet.css"/>
 	<script src="https://d2t45z63lq9zlh.cloudfront.net/panda-v0.0.5.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="/css/style.css"/>
+	<link rel="icon" type="image/png" href="https://vignette.wikia.nocookie.net/agk/images/1/16/Black_Circle.png/revision/latest?cb=20151220003202"/>
 	<title>LiNK (dev page)</title>
 </head>
 <body>
